--- a/_Project-Starter/index.html
+++ b/_Project-Starter/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <div class="">
+      <h1>Project Starter</h1>
+    </div>
 
     <script src="scripts.js"></script>
   </body>
