Project 9 - Sound Board | Updated Home page to include project

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="6 - Scroll Animation/index.html">6 - Scroll Animation</a></li>
         <li><a href="7 - Split Landing Page/index.html">7 - Split Landing Page</a></li>
         <li><a href="8 - Form Wave Animation/index.html">8 - Form Wave Animation</a></li>
+        <li><a href="9 - Sound Board/index.html">9 - Sound Board</a></li>
       </ul>
     </div>
 
