Project 11 Event KeyCodes

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="08 - Form Wave Animation/index.html">08 - Form Wave Animation</a></li>
         <li><a href="09 - Sound Board/index.html">09 - Sound Board</a></li>
         <li><a href="10 - Dad Jokes/index.html">10 - Dad Jokes</a></li>
+        <li><a href="11 - Event KeyCodes/index.html">11 - Event KeyCodes</a></li>
       </ul>
     </div>
 
