--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li><a href="09 - Sound Board/index.html">09 - Sound Board</a></li>
         <li><a href="10 - Dad Jokes/index.html">10 - Dad Jokes</a></li>
         <li><a href="11 - Event KeyCodes/index.html">11 - Event KeyCodes</a></li>
+        <li><a href="12 - FAQ's/index.html">12 - FAQ's</a></li>
       </ul>
     </div>
 
