--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li><a href="10 - Dad Jokes/index.html">10 - Dad Jokes</a></li>
         <li><a href="11 - Event KeyCodes/index.html">11 - Event KeyCodes</a></li>
         <li><a href="12 - FAQ's/index.html">12 - FAQ's</a></li>
+        <li><a href="13 - Random Choice Picker/index.html">13 - Random Choice Picker</a></li>
       </ul>
     </div>
 
