--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li><a href="11 - Event KeyCodes/index.html">11 - Event KeyCodes</a></li>
         <li><a href="12 - FAQ's/index.html">12 - FAQ's</a></li>
         <li><a href="13 - Random Choice Picker/index.html">13 - Random Choice Picker</a></li>
+        <li><a href="14 - Animated Navigation/index.html">14 - Animated Navigation</a></li>
       </ul>
     </div>
 
