--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li><a href="12 - FAQ's/index.html">12 - FAQ's</a></li>
         <li><a href="13 - Random Choice Picker/index.html">13 - Random Choice Picker</a></li>
         <li><a href="14 - Animated Navigation/index.html">14 - Animated Navigation</a></li>
+        <li><a href="15 - Incrementing Counter/index.html">15 - Incrementing Counter</a></li>
       </ul>
     </div>
 
