--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <li><a href="13 - Random Choice Picker/index.html">13 - Random Choice Picker</a></li>
         <li><a href="14 - Animated Navigation/index.html">14 - Animated Navigation</a></li>
         <li><a href="15 - Incrementing Counter/index.html">15 - Incrementing Counter</a></li>
+        <li><a href="16 - Drink Water/index.html">16 - Drink Water</a></li>
       </ul>
     </div>
 
