--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <li><a href="14 - Animated Navigation/index.html">14 - Animated Navigation</a></li>
         <li><a href="15 - Incrementing Counter/index.html">15 - Incrementing Counter</a></li>
         <li><a href="16 - Drink Water/index.html">16 - Drink Water</a></li>
+        <li><a href="17 - Movie App/index.html">17 - Movie App</a></li>
       </ul>
     </div>
 
