--- a/17 - Movie App/index.html
+++ b/17 - Movie App/index.html
@@ -16,17 +16,7 @@
     </header>
 
     <main id="main">
-      <div class="movie">
-        <img src="https://images.unsplash.com/photo-1558979158-65a1eaa08691?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="">
-        <div class="movie-info">
-          <h3>Movie Title</h3>
-          <span class="green">9.8</span>
-        </div>
-        <div class="overview">
-          <h3>Overview</h3>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        </div>
-      </div>
+      <!-- DATA WILL LOAD IN HERE -->
     </main>
 
     <script src="scripts.js"></script>
