Project 18 Background Slider - JS still needed.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li><a href="15 - Incrementing Counter/index.html">15 - Incrementing Counter</a></li>
         <li><a href="16 - Drink Water/index.html">16 - Drink Water</a></li>
         <li><a href="17 - Movie App/index.html">17 - Movie App</a></li>
+        <li><a href="18 - Background Slider/index.html">18 - Background Slider</a></li>
       </ul>
     </div>
 
