Project 19 Theme Clock

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li><a href="16 - Drink Water/index.html">16 - Drink Water</a></li>
         <li><a href="17 - Movie App/index.html">17 - Movie App</a></li>
         <li><a href="18 - Background Slider/index.html">18 - Background Slider</a></li>
+        <li><a href="19 - Theme Clock/index.html">19 - Theme Clock</a></li>
       </ul>
     </div>
 
