--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <li><a href="17 - Movie App/index.html">17 - Movie App</a></li>
         <li><a href="18 - Background Slider/index.html">18 - Background Slider</a></li>
         <li><a href="19 - Theme Clock/index.html">19 - Theme Clock</a></li>
+        <li><a href="20 - Button Ripple Effect/index.html">20 - Button Ripple Effect</a></li>
       </ul>
     </div>
 
