--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <li><a href="18 - Background Slider/index.html">18 - Background Slider</a></li>
         <li><a href="19 - Theme Clock/index.html">19 - Theme Clock</a></li>
         <li><a href="20 - Button Ripple Effect/index.html">20 - Button Ripple Effect</a></li>
+        <li><a href="21 - Drag & Drop/index.html">21 - Drag & Drop</a></li>
       </ul>
     </div>
 
