Project 22 Drawing App

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <li><a href="19 - Theme Clock/index.html">19 - Theme Clock</a></li>
         <li><a href="20 - Button Ripple Effect/index.html">20 - Button Ripple Effect</a></li>
         <li><a href="21 - Drag & Drop/index.html">21 - Drag & Drop</a></li>
+        <li><a href="22 - Drawing App/index.html">22 - Drawing App</a></li>
       </ul>
     </div>
 
