--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <li><a href="20 - Button Ripple Effect/index.html">20 - Button Ripple Effect</a></li>
         <li><a href="21 - Drag & Drop/index.html">21 - Drag & Drop</a></li>
         <li><a href="22 - Drawing App/index.html">22 - Drawing App</a></li>
+        <li><a href="23 - Kinetic CSS Loader/index.html">23 - Kinetic CSS Loader</a></li>
       </ul>
     </div>
 
