Project 24 Content Placeholder

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <li><a href="21 - Drag & Drop/index.html">21 - Drag & Drop</a></li>
         <li><a href="22 - Drawing App/index.html">22 - Drawing App</a></li>
         <li><a href="23 - Kinetic CSS Loader/index.html">23 - Kinetic CSS Loader</a></li>
+        <li><a href="24 - Content Placeholder/index.html">24 - Content Placeholder</a></li>
       </ul>
     </div>
 
