--- a/24 - Content Placeholder/index.html
+++ b/24 - Content Placeholder/index.html
@@ -10,30 +10,22 @@
   <body>
 
     <div class="card">
-      <div class="card-header animated-bg" id="header">
-        <img src="https://images.unsplash.com/photo-1559087867-ce4c91325525?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80" alt="">
-      </div>
+      <div class="card-header animated-bg" id="header">&nbsp;</div>
 
       <div class="card-content">
-        <h3 class="card-title animated-bg animated-bg-text" id="title">Lorem ipsum dolor sit amet</h3>
+        <h3 class="card-title animated-bg animated-bg-text" id="title">&nbsp;</h3>
         <p class="card-excerpt" id="excerpt">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          &nbsp;
           <span class="animated-bg animated-bg-text">&nbsp;</span>
           <span class="animated-bg animated-bg-text">&nbsp;</span>
           <span class="animated-bg animated-bg-text">&nbsp;</span>
           <span class="animated-bg animated-bg-text">&nbsp;</span>
         </p>
         <div class="author">
-          <div class="profile-img animated-bg" id="profile_img">
-            <img src="https://randomuser.me/api/portraits/men/45.jpg" alt="">
-          </div>
+          <div class="profile-img animated-bg" id="profile_img">&nbsp;</div>
           <div class="author-info">
-            <strong class="animated-bg animated-bg-text" id="name">
-              John Doe
-            </strong>
-            <small class="animated-bg animated-bg-text" id="date">
-              Feb 3, 2022
-            </small>
+            <strong class="animated-bg animated-bg-text" id="name">&nbsp;</strong>
+            <small class="animated-bg animated-bg-text" id="date">&nbsp;</small>
           </div>
         </div>
       </div>
