Project 25 Sticky/Fixed Navbar

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <li><a href="22 - Drawing App/index.html">22 - Drawing App</a></li>
         <li><a href="23 - Kinetic CSS Loader/index.html">23 - Kinetic CSS Loader</a></li>
         <li><a href="24 - Content Placeholder/index.html">24 - Content Placeholder</a></li>
+        <li><a href="25 - Sticky Navbar/index.html">25 - Sticky Navbar</a></li>
       </ul>
     </div>
 
