Project 26 Double Verticle Slider

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <li><a href="23 - Kinetic CSS Loader/index.html">23 - Kinetic CSS Loader</a></li>
         <li><a href="24 - Content Placeholder/index.html">24 - Content Placeholder</a></li>
         <li><a href="25 - Sticky Navbar/index.html">25 - Sticky Navbar</a></li>
+        <li><a href="26 - Double Vertical Slider/index.html">26 - Double Vertical Slider</a></li>
       </ul>
     </div>
 
