--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li><a href="24 - Content Placeholder/index.html">24 - Content Placeholder</a></li>
         <li><a href="25 - Sticky Navbar/index.html">25 - Sticky Navbar</a></li>
         <li><a href="26 - Double Vertical Slider/index.html">26 - Double Vertical Slider</a></li>
+        <li><a href="27 - Toast Notification/index.html">27 - Toast Notification</a></li>
       </ul>
     </div>
 
