--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <li><a href="25 - Sticky Navbar/index.html">25 - Sticky Navbar</a></li>
         <li><a href="26 - Double Vertical Slider/index.html">26 - Double Vertical Slider</a></li>
         <li><a href="27 - Toast Notification/index.html">27 - Toast Notification</a></li>
+        <li><a href="28 - Github Profiles/index.html">28 - Github Profiles</a></li>
       </ul>
     </div>
 
