Project 29 Double click to 'like' heart

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <li><a href="26 - Double Vertical Slider/index.html">26 - Double Vertical Slider</a></li>
         <li><a href="27 - Toast Notification/index.html">27 - Toast Notification</a></li>
         <li><a href="28 - Github Profiles/index.html">28 - Github Profiles</a></li>
+        <li><a href="29 - Double Click Heart/index.html">29 - Double Click Heart</a></li>
       </ul>
     </div>
 
