--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <li><a href="27 - Toast Notification/index.html">27 - Toast Notification</a></li>
         <li><a href="28 - Github Profiles/index.html">28 - Github Profiles</a></li>
         <li><a href="29 - Double Click Heart/index.html">29 - Double Click Heart</a></li>
+        <li><a href="30 - Auto Text Effect/index.html">30 - Auto Text Effect</a></li>
       </ul>
     </div>
 
