--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <li><a href="28 - Github Profiles/index.html">28 - Github Profiles</a></li>
         <li><a href="29 - Double Click Heart/index.html">29 - Double Click Heart</a></li>
         <li><a href="30 - Auto Text Effect/index.html">30 - Auto Text Effect</a></li>
+        <li><a href="31 - Password Generator/index.html">31 - Password Generator</a></li>
       </ul>
     </div>
 
