--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <li><a href="29 - Double Click Heart/index.html">29 - Double Click Heart</a></li>
         <li><a href="30 - Auto Text Effect/index.html">30 - Auto Text Effect</a></li>
         <li><a href="31 - Password Generator/index.html">31 - Password Generator</a></li>
+        <li><a href="32 - Good, Cheap, Fast Checkboxes/index.html">32 - Good, Cheap, Fast Checkboxes</a></li>
       </ul>
     </div>
 
