Project 33 Notes App with Local Storage

--- a/33 - Notes App/index.html
+++ b/33 - Notes App/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="">
-      <h1>Check Back Soon 😉</h1>
-    </div>
 
+    <button class="add" id="add">
+      <i class="fas fa-plus"></i> Add Note
+    </button>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/1.2.2/marked.min.js"></script>
     <script src="scripts.js"></script>
   </body>
 </html>
