--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <li><a href="30 - Auto Text Effect/index.html">30 - Auto Text Effect</a></li>
         <li><a href="31 - Password Generator/index.html">31 - Password Generator</a></li>
         <li><a href="32 - Good, Cheap, Fast Checkboxes/index.html">32 - Good, Cheap, Fast Checkboxes</a></li>
+        <li><a href="33 - Notes App/index.html">33 - Notes App</a></li>
       </ul>
     </div>
 
