--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <li><a href="31 - Password Generator/index.html">31 - Password Generator</a></li>
         <li><a href="32 - Good, Cheap, Fast Checkboxes/index.html">32 - Good, Cheap, Fast Checkboxes</a></li>
         <li><a href="33 - Notes App/index.html">33 - Notes App</a></li>
+        <li><a href="34 - Animated Countdown/index.html">34 - Animated Countdown</a></li>
       </ul>
     </div>
 
