--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="">
-      <h1>JavaScript 50 in 50</h1>
+    <h1>JavaScript 50 in 50</h1>
+    <div class="challenges">
       <ul>
         <li><a href="01 - Expanding Cards/index.html">01 - Expanding Cards</a></li>
         <li><a href="02 - Progression Steps/index.html">02 - Progression Steps</a></li>
@@ -21,6 +21,8 @@
         <li><a href="08 - Form Wave Animation/index.html">08 - Form Wave Animation</a></li>
         <li><a href="09 - Sound Board/index.html">09 - Sound Board</a></li>
         <li><a href="10 - Dad Jokes/index.html">10 - Dad Jokes</a></li>
+      </ul>
+      <ul>
         <li><a href="11 - Event KeyCodes/index.html">11 - Event KeyCodes</a></li>
         <li><a href="12 - FAQ's/index.html">12 - FAQ's</a></li>
         <li><a href="13 - Random Choice Picker/index.html">13 - Random Choice Picker</a></li>
@@ -31,6 +33,8 @@
         <li><a href="18 - Background Slider/index.html">18 - Background Slider</a></li>
         <li><a href="19 - Theme Clock/index.html">19 - Theme Clock</a></li>
         <li><a href="20 - Button Ripple Effect/index.html">20 - Button Ripple Effect</a></li>
+      </ul>
+      <ul>
         <li><a href="21 - Drag & Drop/index.html">21 - Drag & Drop</a></li>
         <li><a href="22 - Drawing App/index.html">22 - Drawing App</a></li>
         <li><a href="23 - Kinetic CSS Loader/index.html">23 - Kinetic CSS Loader</a></li>
@@ -41,10 +45,13 @@
         <li><a href="28 - Github Profiles/index.html">28 - Github Profiles</a></li>
         <li><a href="29 - Double Click Heart/index.html">29 - Double Click Heart</a></li>
         <li><a href="30 - Auto Text Effect/index.html">30 - Auto Text Effect</a></li>
+      </ul>
+      <ul>
         <li><a href="31 - Password Generator/index.html">31 - Password Generator</a></li>
         <li><a href="32 - Good, Cheap, Fast Checkboxes/index.html">32 - Good, Cheap, Fast Checkboxes</a></li>
         <li><a href="33 - Notes App/index.html">33 - Notes App</a></li>
         <li><a href="34 - Animated Countdown/index.html">34 - Animated Countdown</a></li>
+        <li><a href="35 - Image Carousel/index.html">35 - Image Carousel</a></li>
       </ul>
     </div>
 
