--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <li><a href="33 - Notes App/index.html">33 - Notes App</a></li>
         <li><a href="34 - Animated Countdown/index.html">34 - Animated Countdown</a></li>
         <li><a href="35 - Image Carousel/index.html">35 - Image Carousel</a></li>
+        <li><a href="36 - Hoverboard/index.html">36 - Hoverboard</a></li>
       </ul>
     </div>
 
