Adjusted spacing of links to main page

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
         <li><a href="35 - Image Carousel/index.html">35 - Image Carousel</a></li>
         <li><a href="36 - Hoverboard/index.html">36 - Hoverboard</a></li>
       </ul>
+      <div class="footer">
+        <ul>
+          <li><a href="http://nicholasmcginnis.com">NicholasMcGinnis.com</a></li>
+          <li><a href="http://sinnigmedia.com">SinnigMedia.com</a></li>
+        </ul>
+      </div>
     </div>
 
     <script src="scripts.js"></script>
