--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <li><a href="34 - Animated Countdown/index.html">34 - Animated Countdown</a></li>
         <li><a href="35 - Image Carousel/index.html">35 - Image Carousel</a></li>
         <li><a href="36 - Hoverboard/index.html">36 - Hoverboard</a></li>
+        <li><a href="37 - Pokedex/index.html">37 - Pokedex</a></li>
       </ul>
       <div class="footer">
         <ul>
