Project 38 Mobile Tab Navigation

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <li><a href="35 - Image Carousel/index.html">35 - Image Carousel</a></li>
         <li><a href="36 - Hoverboard/index.html">36 - Hoverboard</a></li>
         <li><a href="37 - Pokedex/index.html">37 - Pokedex</a></li>
+        <li><a href="38 - Mobile Tab Navigation/index.html">38 - Mobile Tab Navigation</a></li>
       </ul>
       <div class="footer">
         <ul>
@@ -63,6 +64,6 @@
       </div>
     </div>
 
-    <script src="scripts.js"></script>
+    <!-- <script src="scripts.js"></script> -->
   </body>
 </html>
