--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <li><a href="36 - Hoverboard/index.html">36 - Hoverboard</a></li>
         <li><a href="37 - Pokedex/index.html">37 - Pokedex</a></li>
         <li><a href="38 - Mobile Tab Navigation/index.html">38 - Mobile Tab Navigation</a></li>
+        <li><a href="39 - Password Strength Background/index.html">39 - Password Strength Background</a></li>
       </ul>
       <div class="footer">
         <ul>
