--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <li><a href="37 - Pokedex/index.html">37 - Pokedex</a></li>
         <li><a href="38 - Mobile Tab Navigation/index.html">38 - Mobile Tab Navigation</a></li>
         <li><a href="39 - Password Strength Background/index.html">39 - Password Strength Background</a></li>
+        <li><a href="40 - 3D Background Boxes/index.html">40 - 3D Background Boxes</a></li>
       </ul>
       <div class="footer">
         <ul>
