Project 41 Verify Account UI

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
         <li><a href="39 - Password Strength Background/index.html">39 - Password Strength Background</a></li>
         <li><a href="40 - 3D Background Boxes/index.html">40 - 3D Background Boxes</a></li>
       </ul>
+      <ul>
+        <li><a href="41 - Verify Account UI/index.html">41 - Verify Account UI</a></li>
+      </ul>
       <div class="footer">
         <ul>
           <li><a href="http://nicholasmcginnis.com">NicholasMcGinnis.com</a></li>
