Project 42 Live user filter. Fetch dummy data from API, filter results with search

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       </ul>
       <ul>
         <li><a href="41 - Verify Account UI/index.html">41 - Verify Account UI</a></li>
+        <li><a href="42 - Live User Filter/index.html">42 - Live User Filter</a></li>
       </ul>
       <div class="footer">
         <ul>
