--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <li><a href="41 - Verify Account UI/index.html">41 - Verify Account UI</a></li>
         <li><a href="42 - Live User Filter/index.html">42 - Live User Filter</a></li>
         <li><a href="43 - Feedback UI Design/index.html">43 - Feedback UI Design</a></li>
+        <li><a href="44 - Custom Range Slider/index.html">44 - Custom Range Slider</a></li>
       </ul>
       <div class="footer">
         <ul>
