--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <li><a href="42 - Live User Filter/index.html">42 - Live User Filter</a></li>
         <li><a href="43 - Feedback UI Design/index.html">43 - Feedback UI Design</a></li>
         <li><a href="44 - Custom Range Slider/index.html">44 - Custom Range Slider</a></li>
+        <li><a href="45 - Netflix Navigation/index.html">45 - Netflix Navigation</a></li>
       </ul>
       <div class="footer">
         <ul>
