Project 46 Quiz App

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <li><a href="43 - Feedback UI Design/index.html">43 - Feedback UI Design</a></li>
         <li><a href="44 - Custom Range Slider/index.html">44 - Custom Range Slider</a></li>
         <li><a href="45 - Netflix Navigation/index.html">45 - Netflix Navigation</a></li>
+        <li><a href="46 - Quiz App/index.html">46 - Quiz App</a></li>
       </ul>
       <div class="footer">
         <ul>
