Project 47 Testimonial Box Switcher

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <li><a href="44 - Custom Range Slider/index.html">44 - Custom Range Slider</a></li>
         <li><a href="45 - Netflix Navigation/index.html">45 - Netflix Navigation</a></li>
         <li><a href="46 - Quiz App/index.html">46 - Quiz App</a></li>
+        <li><a href="47 - Testimonial Box Switcher/index.html">47 - Testimonial Box Switcher</a></li>
       </ul>
       <div class="footer">
         <ul>
