--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <li><a href="46 - Quiz App/index.html">46 - Quiz App</a></li>
         <li><a href="47 - Testimonial Box Switcher/index.html">47 - Testimonial Box Switcher</a></li>
         <li><a href="48 - Random Image Feed/index.html">48 - Random Image Feed</a></li>
+        <li><a href="49 - Todo List/index.html">49 - Todo List</a></li>
       </ul>
       <div class="footer">
         <ul>
