--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <li><a href="47 - Testimonial Box Switcher/index.html">47 - Testimonial Box Switcher</a></li>
         <li><a href="48 - Random Image Feed/index.html">48 - Random Image Feed</a></li>
         <li><a href="49 - Todo List/index.html">49 - Todo List</a></li>
+        <li><a href="50 - Insect Catch Game/index.html">50 - Insect Catch Game</a></li>
       </ul>
       <div class="footer">
         <ul>
